Cliffin proposed changes commented submission and presentation details

--- a/index.html
+++ b/index.html
@@ -108,12 +108,13 @@
                                 <!-- <a class="dropdown-item" role="presentation" href="./schedule.html">CONFERENCE
                                     SCHEDULE</a>
                                 <a class="dropdown-item" role="presentation" href="./dates.html">IMPORTANT DATES</a> -->
-                                <a class="dropdown-item" role="presentation" href="./crsd.html">CAMERA READY SUBMISSION
-                                    INSTRUCTIONS</a>
+                                <!--<a class="dropdown-item" role="presentation" href="./crsd.html">CAMERA READY SUBMISSION
+                                    INSTRUCTIONS</a>-->
+                                <!--<a class="dropdown-item" role="presentation" href="./crsd.html">CAMERA READY SUBMISSION
                                 <a class="dropdown-item" role="presentation" href="./presentation.html">PRESENTATION
-                                    VIDEO GUIDELINES</a>
+                                    VIDEO GUIDELINES</a>-->
                                  <a class="dropdown-item" role="presentation" href="./cfp.html">CALL FOR PAPERS</a>
-                                 <a class="dropdown-item" role="presentation" href="./submission.html">SUBMISSION</a>
+                                 <a class="dropdown-item" role="presentation" href="./submissionsoon.html">SUBMISSION</a>
                             </div>
                         </li>
                         <li class="nav-item" role="presentation"><a class="nav-link" href="speakers.html">SPEAKERS</a>
@@ -127,7 +128,7 @@
                             </div>
                         </li> -->
                         <li class="nav-item" role="presentation"><a class="nav-link"
-                                href="./registration.html">REGISTRATION</a></li>
+                                href="./registrationsoon.html">REGISTRATION</a></li>
                         <!--li class="nav-item" role="presentation"><a class="nav-link" href="./location.html">LOCATION</a></li-->
                         <li class="nav-item" role="presentation"><a class="nav-link" href="./contact.html">CONTACT</a>
                         </li>
@@ -220,7 +221,7 @@
                             10th November 2024</b> (Hybrid Conference)</p>
                     <hr>
                     <span>
-                  <!--  <a href="./submission.html">
+                  <!--  <a href="./submissionsoon.html">
                     <button class="btn btn-primary" type="button" data-bs-hover-animate="pulse" style="width: 150px;height: 48px;background-color: #210F21;margin-top: 0px; margin-bottom: 20px;font-size: 12px; border-radius: 10px;"><strong>Submit Paper</strong></button></a>-->
                     </span>
                     <span>
@@ -568,7 +569,7 @@
                         <h3>Paper Submission</h3>
                         <ul>
                             <li><a href="./cfp.html">Call for Papers</a></li>
-                            <li><a href="./submission.html">Submit a Paper</a></li>
+                            <li><a href="./submissionsoon.html">Submit a Paper</a></li>
                             <li><a href="https://www.ieee.org/conferences/publishing/templates.html">Paper Template</a>
                             </li>
                         </ul>
