--- a/registration.html
+++ b/registration.html
@@ -227,7 +227,7 @@
             </div> -->
             <div style="text-align: center;">
                 <a target="blank" href="https://www.townscript.com/e/2021-ieee-international-power-and-renewable-energy-conference-iprecon-113442">
-                 <button class="btn btn-primary" type="button" data-bs-hover-animate="pulse" style="width: 155px;height: 48px;background-color: #3f3f3f;margin-top: 5px; margin-bottom: 5px;font-size: 17px; border-radius: 10px;" disabled><strong>Register Now</strong></button></a>
+                 <button class="btn btn-primary" type="button" data-bs-hover-animate="pulse" style="width: 155px;height: 48px;background-color: #3f3f3f;margin-top: 5px; margin-bottom: 5px;font-size: 17px; border-radius: 10px;" ><strong>Register Now</strong></button></a>
             </div>
             <hr>
             <div class="container">
@@ -349,7 +349,7 @@
                         <li>Each accepted paper included in the final program is expected to have at least one author present the paper at the conference virtually. Non-presented paper will not be submitted to IEEE Xplore® digital library as per IEEE no-show policy.</li>
                      </ul>
                      </div>
-                     <!--div class="row">
+                     <div class="row">
 
                         <h3>Registration Steps</h3><br>
                      </div>
@@ -377,6 +377,13 @@
                         <li>Enter attendee details. The first attendee is considered as the registering author.  Please take extreme care to provide Correct paper ID.  Click 'Continue' and check all the information provided in the payment page, Click 'Proceed to Pay'</li>
                     </ul-->
                 </div>
+            </div>
+            <div style="text-align: center;">
+                <a target="_blank" href="https://www.townscript.com/e/IPRECON2022">
+                    <button class="btn btn-primary" type="button" data-bs-hover-animate="pulse" style="width: 155px;height: 48px;background-color: #210F21;margin-top: 5px; margin-bottom: 5px;font-size: 17px; border-radius: 10px;">
+                        <strong>Register Now</strong>
+                    </button>
+                </a>
             </div>
     </div>
     <div class="footer-clean" style="color: rgb(255,255,255);background-color: #210F21;margin-top: 65px;">
