--- a/submissionsoon.html
+++ b/submissionsoon.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html style="font-family: Montserrat, sans-serif;">
 
 <head>
@@ -13,7 +14,7 @@
 </script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>IPRECON 2024 - Application Humanitarian Technology Track</title>
+    <title>IPRECON 2024 | SPEAKERS</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
@@ -70,7 +71,7 @@
     </marquee>
         <div>
             <nav class="navbar navbar-light navbar-expand-md navigation-clean" style="padding: 16px">
-                <div class="container"><a class="navbar-brand" href="https://iprecon2021.org" style="font-family: Montserrat, sans-serif;"><strong>IPRECON</strong> 2021</a><button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+                <div class="container"><a class="navbar-brand" href="index.html" style="font-family: Montserrat, sans-serif;"><strong>IPRECON</strong> 2024</a><button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
                     <div
                         class="collapse navbar-collapse" id="navcol-1" style="font-family: Montserrat, sans-serif;font-size: 12px;">
                         <ul class="nav navbar-nav ml-auto" style="font-size: 14px;">
@@ -94,10 +95,10 @@
                                 <div class="dropdown-menu" role="menu">
                                     <!-- <a class="dropdown-item" role="presentation" href="./schedule.html">CONFERENCE SCHEDULE</a> -->
                                     <!-- <a class="dropdown-item" role="presentation" href="./dates.html">IMPORTANT DATES</a> -->
-                                    <a class="dropdown-item" role="presentation" href="./crsd.html">CAMERA READY SUBMISSION INSTRUCTIONS</a>
-                                    <a class="dropdown-item" role="presentation" href="./presentation.html">PRESENTATION VIDEO GUIDELINES</a>
+                                    <!--<a class="dropdown-item" role="presentation" href="./crsd.html">CAMERA READY SUBMISSION INSTRUCTIONS</a>
+                                    <a class="dropdown-item" role="presentation" href="./presentation.html">PRESENTATION VIDEO GUIDELINES</a>-->
                                     <a class="dropdown-item" role="presentation" href="./cfp.html">CALL FOR PAPERS</a>
-                                    <a class="dropdown-item" role="presentation" href="./submissionsoon.html">SUBMISSION</a>
+                                    <a class="dropdown-item" role="presentation" href="./submission.html">SUBMISSION</a>
                                 </div>
                             </li>
                             <li class="nav-item" role="presentation"><a class="nav-link" href="speakers.html">SPEAKERS</a></li>
@@ -118,19 +119,116 @@
         </div>
         </nav>
        </div>
-    <h1 class="text-center" style="margin-top: 50px;margin-bottom: 39px;">Humanitarian Track Application</h1>
-    <div>
+    <h1 class="text-center" style="margin-top: 50px;">Submission</h1>
+    <!-- <div>
+        <br><br>
         <div class="container">
-            <div class="row text-center">
-                <div class="col-md-12 text-center" style="margin-bottom: 34px;">
-                    <iframe class="formm" width="1280px" height= "3040px" src= "https://docs.google.com/forms/d/e/1FAIpQLSd4NJAzgDKQUwdCngmXFgyxPAZoYlxKZO5AHeTA2ICY5AWYQQ/viewform?usp=sf_link" frameborder= "0" marginwidth= "0" marginheight= "0" style= "border: none; max-width:100%;" allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen> </iframe>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="card" style="height: 100%;">
+                        <div class="card-body"><img class="rounded" src="assets/img/tomy.png" style="width: 100%;margin-bottom: 20px;">
+                            <h4 class="card-title"><strong>Dr. Tomy Sebastian</strong></h4>
+                            <h6 class="text card-subtitle mb-2"><strong>Professor, Department of Electrical & Computer Engineering
+                                <br>
+                                Northeastern University, Boston, MA</strong></h6>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card" style="height: 100%;">
+                        <div class="card-body"><img class="rounded" src="assets/img/pm.jpg" style="width: 100%;margin-bottom: 20px;">
+                            <h4 class="card-title"><strong>Dr. Peter Magyar</strong><br></h4>
+                            <h6 class="text card-subtitle mb-2"><strong>MPP Consult, Germany
+                                <br>
+                                IAS Director of Chapter & Membership Development</strong></h6>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card" style="height: 100%;">
+                        <div class="card-body"><img class="rounded" src="assets/img/Rajashekara.jpg" style="width: 100%;margin-bottom: 20px;">
+                            <h4 class="card-title"><strong>Dr. Kaushik Rajashekara</strong></h4>
+                            <h6 class="text card-subtitle mb-2"><strong>Distinguished Professor of
+                                Engineering
+                                <br>
+                                University of Houston</strong></h6>
+                        </div>
+                    </div>
                 </div>
             </div>
-
         </div>
+        <br><br>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="card" style="height: 100%;">
+                        <div class="card-body"><img class="rounded" src="assets/img/brad.jpg" style="width: 100%;margin-bottom: 20px;">
+                            <h4 class="card-title"><strong>Dr. Brad Lehman</strong></h4>
+                            <h6 class="text card-subtitle mb-2"><strong>Professor, Department of Electrical & Computer Engineering
+                                <br>
+                                Northeastern University, Boston, MA</strong></h6>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card" style="height: 100%;">
+                        <div class="card-body"><img class="rounded" src="assets/img/liuchen.jpg" style="width: 100%;margin-bottom: 20px;">
+                            <h4 class="card-title"><strong>Dr. Liu Chen Chang</strong></h4>
+                            <h6 class="text card-subtitle mb-2"><strong>IEEE PELS President</strong></h6>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card" style="height: 100%;">
+                        <div class="card-body"><img class="rounded" src="assets/img/suresh.jpg" style="width: 100%;margin-bottom: 20px;">
+                            <h4 class="card-title"><strong>Dr. P Suresh Kumar</strong></h4>
+                            <h6 class="text card-subtitle mb-2"><strong>IHRD Director,
+                                <br>
+                                Govt. of Kerala</strong></h6>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <br><br>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="card" style="height: 100%;">
+                        <div class="card-body"><img class="rounded" src="assets/img/lesley.jpg" style="width: 100%;margin-bottom: 20px;">
+                            <h4 class="card-title"><strong>Ms. Lesley Arakkal</strong></h4>
+                            <h6 class="text card-subtitle mb-2"><strong>IEEE IAS CMD Chair</strong></h6>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card" style="height: 100%;">
+                        <div class="card-body"><img class="rounded" src="assets/img/rchards.jpg" style="width: 100%;margin-bottom: 20px;">
+                            <h4 class="card-title"><strong>Dr. Richard Celesko</strong></h4>
+                            <h6 class="text card-subtitle mb-2"><strong>Chair, IEEE IAS CMD Club of 6 Conference Activities
+                            </strong></h6>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card" style="height: 100%;">
+                        <div class="card-body"><img class="rounded" src="assets/img/ailumar.jpg" style="width: 100%;margin-bottom: 20px;">
+                            <h4 class="card-title"><strong>Dr. Anilkumar CV</strong></h4>
+                            <h6 class="text card-subtitle mb-2"><strong>Principal,
+                                <br>
+                                College of Engineering Karunagappally
+                            </strong></h6>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div> -->
+    <div>
+        <h1 style="color: red; text-align: center;">Starts Soon</h1>
     </div>
-    <div></div>
-    <div class="footer-clean" style="color: rgb(255,255,255);background-color: #210F21;margin-top: 65px;">
+
+    <div class="footer-clean" style="color: rgb(255,255,255);background-color: #210F21;margin-top: 8rem;">
         <footer>
             <div class="container">
                 <div class="row justify-content-center">
@@ -138,7 +236,7 @@
                         <h3>Paper Submission</h3>
                         <ul>
                             <li><a href="./cfp.html">Call for Papers</a></li>
-                            <li><a href="./submissionsoon.html">Submit a Paper</a></li>
+                            <li><a href="./submission.html">Submit a Paper</a></li>
                             <li><a href="https://www.ieee.org/conferences/publishing/templates.html">Paper Template</a></li>
                         </ul>
                     </div>
