--- a/cfp.html
+++ b/cfp.html
@@ -95,10 +95,10 @@
                                 <div class="dropdown-menu" role="menu">
                                     <!-- <a class="dropdown-item" role="presentation" href="./schedule.html">CONFERENCE SCHEDULE</a> -->
                                     <!-- <a class="dropdown-item" role="presentation" href="./dates.html">IMPORTANT DATES</a> -->
-                                    <a class="dropdown-item" role="presentation" href="./crsd.html">CAMERA READY SUBMISSION INSTRUCTIONS</a>
-                                    <a class="dropdown-item" role="presentation" href="./presentation.html">PRESENTATION VIDEO GUIDELINES</a>
+                                    <!--<a class="dropdown-item" role="presentation" href="./crsd.html">CAMERA READY SUBMISSION INSTRUCTIONS</a>
+                                    <a class="dropdown-item" role="presentation" href="./presentation.html">PRESENTATION VIDEO GUIDELINES</a>-->
                                     <a class="dropdown-item" role="presentation" href="./cfp.html">CALL FOR PAPERS</a>
-                                    <a class="dropdown-item" role="presentation" href="./submission.html">SUBMISSION</a>
+                                    <a class="dropdown-item" role="presentation" href="./submissionsoon.html">SUBMISSION</a>
                                 </div>
                             </li>
                             <li class="nav-item" role="presentation"><a class="nav-link" href="speakers.html">SPEAKERS</a></li>
@@ -108,7 +108,7 @@
                                         <a class="dropdown-item" role="presentation" href="./special.html">SPECIAL TRACKS</a>
                                 </div>
                             </li> -->
-                            <li class="nav-item" role="presentation"><a class="nav-link" href="./registration.html">REGISTRATION</a></li>
+                            <li class="nav-item" role="presentation"><a class="nav-link" href="./registrationsoon.html">REGISTRATION</a></li>
                             <!--li class="nav-item" role="presentation"><a class="nav-link" href="./location.html">LOCATION</a></li-->
                             <li class="nav-item" role="presentation"><a class="nav-link" href="./contact.html">CONTACT</a></li>
                             <!--li class="nav-item" role="presentation"><a class="nav-link" href="./assets/iprecon2021_process.pdf">TECHNICAL REVIEW PROCESS</a></li>
@@ -134,7 +134,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-right" style="margin-top: 44px;">
-                <a href="./submission.html"><button class="btn btn-primary" type="button" style="margin-bottom: 30px; font-size: 22px;height: 53px;width: 256px;background-color: #210F21; border-radius: 10px;"><strong>Submit Now</strong><br></button></a>
+                <a href="./submissionsoon.html"><button class="btn btn-primary" type="button" style="margin-bottom: 30px; font-size: 22px;height: 53px;width: 256px;background-color: #210F21; border-radius: 10px;"><strong>Submit Now</strong><br></button></a>
                     <a href="assets/CFP-2024.pdf" style="padding-left: 1.5em;"><button class="btn btn-primary" type="button" style="margin-bottom: 30px;font-size: 22px;height: 53px;width: 256px;background-color: #210F21; border-radius: 10px;"><strong>Download CFP</strong><br></button></a></div>
             </div>
         </div>
