--- a/speakers.html
+++ b/speakers.html
@@ -98,7 +98,7 @@
                                     <a class="dropdown-item" role="presentation" href="./crsd.html">CAMERA READY SUBMISSION INSTRUCTIONS</a>
                                     <a class="dropdown-item" role="presentation" href="./presentation.html">PRESENTATION VIDEO GUIDELINES</a>
                                     <a class="dropdown-item" role="presentation" href="./cfp.html">CALL FOR PAPERS</a>
-                                    <a class="dropdown-item" role="presentation" href="./submission.html">SUBMISSION</a>
+                                    <a class="dropdown-item" role="presentation" href="./submissionsoon.html">SUBMISSION</a>
                                 </div>
                             </li>
                             <li class="nav-item" role="presentation"><a class="nav-link" href="speakers.html">SPEAKERS</a></li>
@@ -108,7 +108,7 @@
                                         <a class="dropdown-item" role="presentation" href="./special.html">SPECIAL TRACKS</a>
                                 </div>
                             </li> -->
-                            <li class="nav-item" role="presentation"><a class="nav-link" href="./registration.html">REGISTRATION</a></li>
+                            <li class="nav-item" role="presentation"><a class="nav-link" href="./registrationsoon.html">REGISTRATION</a></li>
                             <!--li class="nav-item" role="presentation"><a class="nav-link" href="./location.html">LOCATION</a></li-->
                             <li class="nav-item" role="presentation"><a class="nav-link" href="./contact.html">CONTACT</a></li>
                             <!--li class="nav-item" role="presentation"><a class="nav-link" href="./assets/iprecon2021_process.pdf">TECHNICAL REVIEW PROCESS</a></li>
@@ -236,7 +236,7 @@
                         <h3>Paper Submission</h3>
                         <ul>
                             <li><a href="./cfp.html">Call for Papers</a></li>
-                            <li><a href="./submission.html">Submit a Paper</a></li>
+                            <li><a href="./submissionsoon.html">Submit a Paper</a></li>
                             <li><a href="https://www.ieee.org/conferences/publishing/templates.html">Paper Template</a></li>
                         </ul>
                     </div>
