Dates and other html and li commented

--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
                                 aria-expanded="false" href="#">FOR AUTHORS</a>
                             <div class="dropdown-menu" role="menu">
                                 <!-- <a class="dropdown-item" role="presentation" href="./schedule.html">CONFERENCE
-                                    SCHEDULE</a>
-                                <a class="dropdown-item" role="presentation" href="./dates.html">IMPORTANT DATES</a> -->
+                                    SCHEDULE</a>-->
+                                <a class="dropdown-item" role="presentation" href="./dates.html">IMPORTANT DATES</a> 
                                 <!--<a class="dropdown-item" role="presentation" href="./crsd.html">CAMERA READY SUBMISSION
                                     INSTRUCTIONS</a>-->
                                 <!--<a class="dropdown-item" role="presentation" href="./crsd.html">CAMERA READY SUBMISSION
