--- a/dates.html
+++ b/dates.html
@@ -97,7 +97,7 @@
                             <li class="nav-item" role="presentation"><a class="nav-link" href="./committee.html">COMMITTEE</a></li>
                             <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="#">FOR AUTHORS</a>
                                 <div class="dropdown-menu" role="menu">
-                                    <a class="dropdown-item" role="presentation" href="./schedule.html">CONFERENCE SCHEDULE</a>
+                                    <!--<a class="dropdown-item" role="presentation" href="./schedule.html">CONFERENCE SCHEDULE</a>-->
                                     <a class="dropdown-item" role="presentation" href="./dates.html">IMPORTANT DATES</a>
                                     <!--<a class="dropdown-item" role="presentation" href="./crsd.html">CAMERA READY SUBMISSION INSTRUCTIONS</a>
                                     <a class="dropdown-item" role="presentation" href="./presentation.html">PRESENTATION VIDEO GUIDELINES</a>-->
@@ -106,13 +106,14 @@
                                 </div>
                             </li>
                             <li class="nav-item" role="presentation"><a class="nav-link" href="speakers.html">SPEAKERS</a></li>
-                            <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="#">SESSIONS</a>
+                            <!--<li class="nav-item dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="#">SESSIONS</a>
                                 <div class="dropdown-menu" role="menu">
                                     <a class="dropdown-item" role="presentation" href="./keynotes.html">KEYNOTES & SPECIAL SESSIONS</a>
                                         <a class="dropdown-item" role="presentation" href="./special.html">SPECIAL TRACKS</a>
-                                        <!--a class="dropdown-item" role="presentation" href="./submission.html">SUBMISSION</a-->
+                                        <a class="dropdown-item" role="presentation" href="./submissionsoon.html">SUBMISSION</a>
                                 </div>
                             </li>
+                        -->
                             <li class="nav-item" role="presentation"><a class="nav-link" href="./registrationsoon.html">REGISTRATION</a></li>
                             <!--li class="nav-item" role="presentation"><a class="nav-link" href="./location.html">LOCATION</a></li-->
                             <li class="nav-item" role="presentation"><a class="nav-link" href="./contact.html">CONTACT</a></li>
