--- a/index.html
+++ b/index.html
@@ -251,8 +251,8 @@
                         About</h1>
                     <p class="text-justify"
                         style="font-family: Montserrat, sans-serif;color: rgb(255,255,255);font-size: 14px;padding: 0px;padding-top: 0px;margin-top: 33px;">
-                        2024 IEEE International Power and Renewable Energy Conference (IPRECON) is
-                        the 4th edition of India's first IEEE IAS Club of 6 Technical Paper Conference organized
+                        2024 International Power and Renewable Energy Conference (IPRECON) is
+                        the 4th edition of Technical Paper Conference organized
                         by the IEEE Student Branch College of Engineering Karunagappally. IPRECON provides a
                         platform for students and professionals from all around the world to share their
                         findings in the fields of Power, Renewable Energy and Computing Technologies. With
@@ -354,9 +354,9 @@
                                         <li>Fuzzy semantic Web<br></li>
                                         <li>Swarm intelligence and algorithms for optimising smart cities<br></li>
                                     </ul>
-                                    Accepted papers will be submitted for inclusion into the IEEE
+                                    <!-- Accepted papers will be submitted for inclusion into the IEEE
                                     Xplore<span>&#174;</span> Digital Library subject to meeting IEEE Xplore's scopes
-                                    and quality requirements.<br><br>
+                                    and quality requirements.<br><br> -->
                                     <a href="assets/CFP-2024.pdf"><button class="btn btn-primary" type="button"
                                             style="margin-bottom: 30px;background-color:  #210F21;width: 203px;height: 45px; border-radius: 10px; "><strong>Download CFP
                                             </strong></button></a>
