Final Ready for senting the Application

--- a/speakers.html
+++ b/speakers.html
@@ -12,6 +12,24 @@
 
   gtag('config', 'G-25NXLSZ6FD');
 </script>
+<style>
+    .bounce {
+  color: red;
+  text-align: center;
+  font-size: 24px;
+  animation: bounce 1s ease infinite;
+}
+
+@keyframes bounce {
+  10% { transform: scaleY(0.9) translateY(5%); }
+  45% { transform: scaleY(1.2) translateY(-100%); }
+  65% { transform: scaleY(0.95) translateY(0); }
+  75% { transform: scaleY(1.1) translateY(-40%); }
+  85% { transform: scaleY(1) translateY(0); }
+  90% { transform: scaleY(1) translateY(-20%); }
+  100% { transform: scaleY(1) translateY(0%); }
+}
+</style>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>IPRECON 2024 | SPEAKERS</title>
@@ -64,9 +82,11 @@
                 <img src="assets/ipreconheader2024.png" style="width: 100%;">
         </div>
     </div>
-    <marquee style="background-color: #180918; color: white; padding-bottom: 0.8em;" behavior="scroll" scrollamount="13" direction="left" onmouseover="this.stop();" onmouseout="this.start();">
-        <span>Paper submission for IPRECON 2024 will open soon.
-             <!--<a style="color: wheat;" href="https://ieeexplore.ieee.org/xpl/conhome/10059458/proceeding">Click here<i class="ionicons ion-link" style="font-size: 25px;"></i></a>-->
+    <marquee style="background-color: #180918; color: white; padding-bottom: 0.8em;" behavior="scroll" scrollamount="13"
+        direction="left" onmouseover="this.stop();" onmouseout="this.start();">
+        <span>
+            Paper submission for IPRECON 2024 is now open; To submit
+             <a style="color: wheat;" href="./submission.html">Click here<i class="ionicons ion-link" style="font-size: 25px;"></i></a>
         </span>
     </marquee>
         <div>
@@ -78,12 +98,12 @@
                             <li class="nav-item" role="presentation"><a class="nav-link" href="./index.html">HOME<br></a></li>
                             <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="#">ABOUT</a>
                                 <div class="dropdown-menu" role="menu">
-                                    <a class="dropdown-item" role="presentation" href="https://2022.iprecon.org/">IPRECON
+                                    <!--<a class="dropdown-item" role="presentation" href="https://2022.iprecon.org/">IPRECON
                                         2022</a>
                                     <a class="dropdown-item" role="presentation" href="https://2021.iprecon.org/">IPRECON
                                         2021</a>
                                     <a class="dropdown-item" role="presentation" href="https://2020.iprecon.org/">IPRECON
-                                        2020</a>
+                                        2020</a>-->
                                     <a class="dropdown-item" role="presentation" href="./organizers.html">ORGANIZERS</a>
                                     <a class="dropdown-item" role="presentation" href="./venue.html">VENUE</a>
                                     <a class="dropdown-item" role="presentation" href="./kerala.html">KERALA</a>
@@ -98,7 +118,7 @@
                                     <!--<a class="dropdown-item" role="presentation" href="./crsd.html">CAMERA READY SUBMISSION INSTRUCTIONS</a>
                                     <a class="dropdown-item" role="presentation" href="./presentation.html">PRESENTATION VIDEO GUIDELINES</a>-->
                                     <a class="dropdown-item" role="presentation" href="./cfp.html">CALL FOR PAPERS</a>
-                                    <a class="dropdown-item" role="presentation" href="./submissionsoon.html">SUBMISSION</a>
+                                    <a class="dropdown-item" role="presentation" href="./submission.html">SUBMISSION</a>
                                 </div>
                             </li>
                             <li class="nav-item" role="presentation"><a class="nav-link" href="speakers.html">SPEAKERS</a></li>
@@ -119,7 +139,7 @@
         </div>
         </nav>
        </div>
-    <h1 class="text-center" style="margin-top: 50px;">Speakers</h1>
+    <h1 class="text-center" style="margin-top: 50px;">Speaker's</h1>
     <!-- <div>
         <br><br>
         <div class="container">
@@ -224,8 +244,8 @@
             </div>
         </div>
     </div> -->
-    <div>
-        <h1 style="color: red; text-align: center;">Coming Soon</h1>
+    <div><br><br>
+        <h1 class="bounce" style="color: red; text-align: center; font-size: 24px;">Coming Soon</h1>
     </div>
 
     <div class="footer-clean" style="color: rgb(255,255,255);background-color: #210F21;margin-top: 8rem;">
@@ -236,7 +256,7 @@
                         <h3>Paper Submission</h3>
                         <ul>
                             <li><a href="./cfp.html">Call for Papers</a></li>
-                            <li><a href="./submissionsoon.html">Submit a Paper</a></li>
+                            <li><a href="./submission.html">Submit a Paper</a></li>
                             <li><a href="https://www.ieee.org/conferences/publishing/templates.html">Paper Template</a></li>
                         </ul>
                     </div>
