--- a/cfp.html
+++ b/cfp.html
@@ -63,9 +63,11 @@
                 <img src="assets/ipreconheader2024.png" style="width: 100%;">
         </div>
     </div>
-    <marquee style="background-color: #180918; color: white; padding-bottom: 0.8em;" behavior="scroll" scrollamount="13" direction="left" onmouseover="this.stop();" onmouseout="this.start();">
-        <span>Paper submission for IPRECON 2024 will open soon.
-<!--              <!--<a style="color: wheat;" href="https://ieeexplore.ieee.org/xpl/conhome/10059458/proceeding">Click here<i class="ionicons ion-link" style="font-size: 25px;"></i></a>--> -->
+    <marquee style="background-color: #180918; color: white; padding-bottom: 0.8em;" behavior="scroll" scrollamount="13"
+        direction="left" onmouseover="this.stop();" onmouseout="this.start();">
+        <span>
+            Paper submission for IPRECON 2024 is now open; To submit
+             <a style="color: wheat;" href="./submission.html">Click here<i class="ionicons ion-link" style="font-size: 25px;"></i></a>
         </span>
     </marquee>
 
@@ -78,12 +80,12 @@
                             <li class="nav-item" role="presentation"><a class="nav-link" href="./index.html">HOME<br></a></li>
                             <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="#">ABOUT</a>
                                 <div class="dropdown-menu" role="menu">
-                                    <a class="dropdown-item" role="presentation" href="https://2022.iprecon.org/">IPRECON
+                                    <!--<a class="dropdown-item" role="presentation" href="https://2022.iprecon.org/">IPRECON
                                         2022</a>
                                     <a class="dropdown-item" role="presentation" href="https://2021.iprecon.org/">IPRECON
                                         2021</a>
                                     <a class="dropdown-item" role="presentation" href="https://2020.iprecon.org/">IPRECON
-                                        2020</a>
+                                        2020</a>-->
                                     <a class="dropdown-item" role="presentation" href="./organizers.html">ORGANIZERS</a>
                                     <a class="dropdown-item" role="presentation" href="./venue.html">VENUE</a>
                                     <a class="dropdown-item" role="presentation" href="./kerala.html">KERALA</a>
@@ -98,7 +100,7 @@
                                     <!--<a class="dropdown-item" role="presentation" href="./crsd.html">CAMERA READY SUBMISSION INSTRUCTIONS</a>
                                     <a class="dropdown-item" role="presentation" href="./presentation.html">PRESENTATION VIDEO GUIDELINES</a>-->
                                     <a class="dropdown-item" role="presentation" href="./cfp.html">CALL FOR PAPERS</a>
-                                    <a class="dropdown-item" role="presentation" href="./submissionsoon.html">SUBMISSION</a>
+                                    <a class="dropdown-item" role="presentation" href="./submission.html">SUBMISSION</a>
                                 </div>
                             </li>
                             <li class="nav-item" role="presentation"><a class="nav-link" href="speakers.html">SPEAKERS</a></li>
@@ -134,8 +136,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-right" style="margin-top: 44px;">
-                <a href="./submissionsoon.html"><button class="btn btn-primary" type="button" style="margin-bottom: 30px; font-size: 22px;height: 53px;width: 256px;background-color: #210F21; border-radius: 10px;"><strong>Submit Now</strong><br></button></a>
-                    <a href="assets/CFP-2024.pdf" style="padding-left: 1.5em;"><button class="btn btn-primary" type="button" style="margin-bottom: 30px;font-size: 22px;height: 53px;width: 256px;background-color: #210F21; border-radius: 10px;"><strong>Download CFP</strong><br></button></a></div>
+                <a href="./submission.html"><button class="btn btn-primary" type="button" style="margin-bottom: 30px; font-size: 22px;height: 53px;width: 256px;background-color: #210F21; border-radius: 10px;"><strong>Submit Now</strong><br></button></a>
+                <a href="assets/CFP-2024.pdf" download style="padding-left: 1.5em;">
+                    <button class="btn btn-primary" type="button" style="margin-bottom: 30px;font-size: 22px;height: 53px;width: 256px;background-color: #210F21; border-radius: 10px;">
+                        <strong>Download CFP</strong><br>
+                    </button>
+                </a>
+
             </div>
         </div>
     </div>
