--- a/keynotes.html
+++ b/keynotes.html
@@ -63,9 +63,11 @@
                 <img src="assets/ipreconheader2024.png" style="width: 100%;">
         </div>
     </div>
-    <marquee style="background-color: #180918; color: white; padding-bottom: 0.8em;" behavior="scroll" scrollamount="13" direction="left" onmouseover="this.stop();" onmouseout="this.start();">
-        <span>Paper submission for IPRECON 2024 will open soon.
-             <!--<a style="color: wheat;" href="https://ieeexplore.ieee.org/xpl/conhome/10059458/proceeding">Click here<i class="ionicons ion-link" style="font-size: 25px;"></i></a>-->
+    <marquee style="background-color: #180918; color: white; padding-bottom: 0.8em;" behavior="scroll" scrollamount="13"
+        direction="left" onmouseover="this.stop();" onmouseout="this.start();">
+        <span>
+            Paper submission for IPRECON 2024 is now open; To submit
+             <a style="color: wheat;" href="./submission.html">Click here<i class="ionicons ion-link" style="font-size: 25px;"></i></a>
         </span>
     </marquee>
         <div>
@@ -92,7 +94,7 @@
                                     <!--<a class="dropdown-item" role="presentation" href="./crsd.html">CAMERA READY SUBMISSION INSTRUCTIONS</a>
                                     <a class="dropdown-item" role="presentation" href="./presentation.html">PRESENTATION VIDEO GUIDELINES</a>-->
                                     <a class="dropdown-item" role="presentation" href="./cfp.html">CALL FOR PAPERS</a>
-                                    <a class="dropdown-item" role="presentation" href="./submissionsoon.html">SUBMISSION</a>
+                                    <a class="dropdown-item" role="presentation" href="./submission.html">SUBMISSION</a>
                                 </div>
                             </li>
                             <li class="nav-item" role="presentation"><a class="nav-link" href="speakers.html">SPEAKERS</a></li>
@@ -100,7 +102,7 @@
                                 <div class="dropdown-menu" role="menu">
                                     <a class="dropdown-item" role="presentation" href="./keynotes.html">KEYNOTES & SPECIAL SESSIONS</a>
                                         <a class="dropdown-item" role="presentation" href="./special.html">SPECIAL TRACKS</a>
-                                        <!--a class="dropdown-item" role="presentation" href="./submissionsoon.html">SUBMISSION</a-->
+                                        <!--a class="dropdown-item" role="presentation" href="./submission.html">SUBMISSION</a-->
                                 </div>
                             </li>
                             <li class="nav-item" role="presentation"><a class="nav-link" href="./registrationsoon.html">REGISTRATION</a></li>
@@ -328,7 +330,7 @@ Continuing her inspiring journey as a dedicated volunteer of IEEE Region-10, jud
                         <h3>Paper Submission</h3>
                         <ul>
                             <li><a href="./cfp.html">Call for Papers</a></li>
-                            <li><a href="./submissionsoon.html">Submit a Paper</a></li>
+                            <li><a href="./submission.html">Submit a Paper</a></li>
                             <li><a href="https://www.ieee.org/conferences/publishing/templates.html">Paper Template</a></li>
                         </ul>
                     </div>
