--- a/registration.html
+++ b/registration.html
@@ -65,9 +65,11 @@
                 <img src="assets/ipreconheader2024.png" style="width: 100%;">
         </div>
     </div>
-    <marquee style="background-color: #180918; color: white; padding-bottom: 0.8em;" behavior="scroll" scrollamount="13" direction="left" onmouseover="this.stop();" onmouseout="this.start();">
-        <span>Paper submission for IPRECON 2024 will open soon.
-             <!--<a style="color: wheat;" href="https://ieeexplore.ieee.org/xpl/conhome/10059458/proceeding">Click here<i class="ionicons ion-link" style="font-size: 25px;"></i></a>-->
+    <marquee style="background-color: #180918; color: white; padding-bottom: 0.8em;" behavior="scroll" scrollamount="13"
+        direction="left" onmouseover="this.stop();" onmouseout="this.start();">
+        <span>
+            Paper submission for IPRECON 2024 is now open; To submit
+             <a style="color: wheat;" href="./submission.html">Click here<i class="ionicons ion-link" style="font-size: 25px;"></i></a>
         </span>
     </marquee>
 
@@ -82,12 +84,12 @@
                             <li class="nav-item" role="presentation"><a class="nav-link" href="./index.html">HOME<br></a></li>
                             <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="#">ABOUT</a>
                                 <div class="dropdown-menu" role="menu">
-                                    <a class="dropdown-item" role="presentation" href="https://2022.iprecon.org/">IPRECON
+                                    <!--<a class="dropdown-item" role="presentation" href="https://2022.iprecon.org/">IPRECON
                                         2022</a>
                                     <a class="dropdown-item" role="presentation" href="https://2021.iprecon.org/">IPRECON
                                         2021</a>
                                     <a class="dropdown-item" role="presentation" href="https://2020.iprecon.org/">IPRECON
-                                        2020</a>
+                                        2020</a>-->
                                     <a class="dropdown-item" role="presentation" href="./organizers.html">ORGANIZERS</a>
                                     <a class="dropdown-item" role="presentation" href="./venue.html">VENUE</a>
                                     <a class="dropdown-item" role="presentation" href="./kerala.html">KERALA</a>
