--- a/submission.html
+++ b/submission.html
@@ -63,9 +63,11 @@
                 <img src="assets/ipreconheader2024.png" style="width: 100%;">
         </div>
     </div>
-    <marquee style="background-color: #180918; color: white; padding-bottom: 0.8em;" behavior="scroll" scrollamount="13" direction="left" onmouseover="this.stop();" onmouseout="this.start();">
-        <span>Paper submission for IPRECON 2024 will open soon.
-             <!--<a style="color: wheat;" href="https://ieeexplore.ieee.org/xpl/conhome/10059458/proceeding">Click here<i class="ionicons ion-link" style="font-size: 25px;"></i></a>-->
+    <marquee style="background-color: #180918; color: white; padding-bottom: 0.8em;" behavior="scroll" scrollamount="13"
+        direction="left" onmouseover="this.stop();" onmouseout="this.start();">
+        <span>
+            Paper submission for IPRECON 2024 is now open; To submit
+             <a style="color: wheat;" href="./submission.html">Click here<i class="ionicons ion-link" style="font-size: 25px;"></i></a>
         </span>
     </marquee>
         <div>
@@ -77,12 +79,12 @@
                             <li class="nav-item" role="presentation"><a class="nav-link" href="./index.html">HOME<br></a></li>
                             <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="#">ABOUT</a>
                                 <div class="dropdown-menu" role="menu">
-                                    <a class="dropdown-item" role="presentation" href="https://2022.iprecon.org/">IPRECON
+                                    <!--<a class="dropdown-item" role="presentation" href="https://2022.iprecon.org/">IPRECON
                                         2022</a>
                                     <a class="dropdown-item" role="presentation" href="https://2021.iprecon.org/">IPRECON
                                         2021</a>
                                     <a class="dropdown-item" role="presentation" href="https://2020.iprecon.org/">IPRECON
-                                        2020</a>
+                                        2020</a>-->
                                     <a class="dropdown-item" role="presentation" href="./organizers.html">ORGANIZERS</a>
                                     <a class="dropdown-item" role="presentation" href="./venue.html">VENUE</a>
                                     <a class="dropdown-item" role="presentation" href="./kerala.html">KERALA</a>
@@ -97,7 +99,7 @@
                                     <!--<a class="dropdown-item" role="presentation" href="./crsd.html">CAMERA READY SUBMISSION INSTRUCTIONS</a>
                                     <a class="dropdown-item" role="presentation" href="./presentation.html">PRESENTATION VIDEO GUIDELINES</a>-->
                                     <a class="dropdown-item" role="presentation" href="./cfp.html">CALL FOR PAPERS</a>
-                                    <a class="dropdown-item" role="presentation" href="./submissionsoon.html">SUBMISSION</a>
+                                    <a class="dropdown-item" role="presentation" href="./submission.html">SUBMISSION</a>
                                 </div>
                             </li>
                             <li class="nav-item" role="presentation"><a class="nav-link" href="speakers.html">SPEAKERS</a></li>
@@ -138,10 +140,11 @@
             <div class="row">
                 <div class="col-md-6 col-xl-7">
                     <h1 class="d-block" style="margin-bottom: 24px;font-size: 25px;"><strong>Procedure for Uploading Papers</strong><br></h1>
-                    <p class="text-left d-block" style="font-size: 13px;">1.&nbsp;<strong>Go to the paper submission website :&nbsp;</strong><a href="#0"><strong>https://cmt3.research.microsoft.com/IPRECON2024</strong></a><br><br>2.&nbsp;<strong>You will see a dialog box below with the IPRECON2024 logo on the page. If you are new to the system, please choose “Register” at the bottom of the dialog box:</strong><br><br>3.&nbsp;<strong>Follow the wizard to finish the registration. Upon finishing, you'll have an account in the system with user ID and Password.</strong><br><br>4.&nbsp;<strong>Again, log into the system using your login account info (email address and password).&nbsp;</strong><br><br>5.&nbsp;<strong>Fill out the submission form: “Title”, “Abstract”, and “Authors” and enter email ID and details of all the co-authors (Name, Designation, Institute and the Country to which your institute is affiliated etc.) and “Submit” your paper.Choose appropriate Subject Area</strong><br><br>6.&nbsp;<strong>Please note the Microsoft CMT system does not send confirmation emails after paper submission. However, the submitting author can send email to all authors through the paper submission page. To verify your submission, you may again login to the system to check the submitted file</strong>.<br><br></p>
-                    <a href="https://cmt3.research.microsoft.com/iprecon2024"><button
+                    <p class="text-left d-block" style="font-size: 13px;">1.&nbsp;<strong>Go to the paper submission website :&nbsp;</strong><a href="https://cmt3.research.microsoft.com/IPRECON2024" target="_blank"><strong>https://cmt3.research.microsoft.com/IPRECON2024</strong></a>
+                        <br><br>2.&nbsp;<strong>You will see a dialog box below with the IPRECON2024 logo on the page. If you are new to the system, please choose “Register” at the bottom of the dialog box:</strong><br><br>3.&nbsp;<strong>Follow the wizard to finish the registration. Upon finishing, you'll have an account in the system with user ID and Password.</strong><br><br>4.&nbsp;<strong>Again, log into the system using your login account info (email address and password).&nbsp;</strong><br><br>5.&nbsp;<strong>Fill out the submission form: “Title”, “Abstract”, and “Authors” and enter email ID and details of all the co-authors (Name, Designation, Institute and the Country to which your institute is affiliated etc.) and “Submit” your paper.Choose appropriate Subject Area</strong><br><br>6.&nbsp;<strong>Please note the Microsoft CMT system does not send confirmation emails after paper submission. However, the submitting author can send email to all authors through the paper submission page. To verify your submission, you may again login to the system to check the submitted file</strong>.<br><br></p>
+                    <a href="https://cmt3.research.microsoft.com/iprecon2024"target="_blank" ><button
                         class="btn btn-primary" type="button" style="margin-bottom: 30px;background-color: #210F21;width: 203px;height: 45px; border-radius: 10px;"><strong>Submit paper</strong></button></a>
-                        <a href="assets/CFP-2024.pdf"><button
+                        <a href="assets/CFP-2024.pdf" download ><button
                         class="btn btn-primary" type="button" style="margin-bottom: 30px;background-color: #210F21;width: 203px;height: 45px; border-radius: 10px;"><strong>Download CFP</strong></button></a>
                 </div>
                 <div class="col-md-6 col-xl-5"><img class="float-right" src="assets/img/cmt_submission.PNG" style="width: 100%;"></div>
@@ -158,7 +161,7 @@
                         <h3>Paper Submission</h3>
                         <ul>
                             <li><a href="./cfp.html">Call for Papers</a></li>
-                            <li><a href="./submissionsoon.html">Submit a Paper</a></li>
+                            <li><a href="./submission.html">Submit a Paper</a></li>
                             <li><a href="https://www.ieee.org/conferences/publishing/templates.html">Paper Template</a></li>
                         </ul>
                     </div>
