--- a/speakers.html
+++ b/speakers.html
@@ -108,6 +108,7 @@
                                     <a class="dropdown-item" role="presentation" href="./venue.html">VENUE</a>
                                     <a class="dropdown-item" role="presentation" href="./kerala.html">KERALA</a>
                                     <a class="dropdown-item" role="presentation" href="./accomodation.html">ACCOMODATION</a>
+                                    <a class="dropdown-item" role="presentation" href="./index.html#PastEndeavors">PAST ENDEAVORS</a>
                                 </div>
                             </li>
                             <li class="nav-item" role="presentation"><a class="nav-link" href="./committee.html">COMMITTEE</a></li>
